--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 }
                 input.style.display = "none";
                 display.style.display = "block";
+                display.style.fontWeight = "bold";
             }
         }
 
