--- a/index.html
+++ b/index.html
@@ -135,77 +135,6 @@
             }
         });
     </script>
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f4f4f4;
-            margin: 20px;
-        }
-
-        h1 {
-            color: #333;
-            font-size: 40px;
-        }
-
-        .timers {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-        }
-
-        .timer-container {
-            text-align: center;
-            background-color: white;
-            padding: 20px;
-            border-radius: 15px;
-            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
-            width: 160px;
-            cursor: pointer;
-        }
-
-        .timer-container.selected {
-            border: 4px solid #ff0000;
-        }
-
-        .timer {
-            font-size: 50px;
-            font-weight: bold;
-            color: #ff5722;
-            margin-top: 15px;
-        }
-
-        .team-name-display {
-            font-size: 24px;
-            font-weight: bold;
-            cursor: pointer;
-            padding: 8px;
-        }
-
-        .team-name-input {
-            font-size: 24px;
-            padding: 8px;
-            width: 100%;
-            text-align: center;
-            display: none;
-        }
-
-        button {
-            margin: 8px;
-            padding: 12px 18px;
-            font-size: 18px;
-            cursor: pointer;
-            background-color: #ff0000;
-            color: white;
-            border: none;
-            border-radius: 8px;
-        }
-
-        button:hover {
-            background-color: #cc0000;
-        }
-    </style>
 </head>
 <body>
     <h1>Wie is de slimste Kameraad</h1>
@@ -226,6 +155,9 @@
     <button onclick="adjustTime(40)">+40 sec</button>
     <button onclick="adjustTime(50)">+50 sec</button>
     <button onclick="adjustTime(-20)">-20 sec</button>
+
+</body>
+</html>
 
 </body>
 </html>
