--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>De slimste Kameraad</title>
+    <title>Wie is de slimste Kameraad</title>
 
     <!-- ✅ Laad Firebase correct -->
     <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -66,7 +66,7 @@
     </style>
 </head>
 <body>
-    <h1>De slimste Kameraad</h1>
+    <h1>Wie is de slimste Kameraad</h1>
 
     <div class="timers">
         <div class="timer-container" id="timerBox1" onclick="selectTimer(1)">
