--- a/index.html
+++ b/index.html
@@ -143,56 +143,35 @@
                 }
             });
 
-            window.startStopTimer = function() {
-                selectedRef.get().then(snapshot => {
-                    if (snapshot.exists()) {
-                        let timerKey = `timer${snapshot.val()}`;
-                        if (intervals[timerKey]) {
-                            clearInterval(intervals[timerKey]);
-                            intervals[timerKey] = null;
-                            return;
-                        }
-                        intervals[timerKey] = setInterval(() => {
-                            timerRef.child(timerKey).get().then(timeSnap => {
-                                let time = timeSnap.exists() ? timeSnap.val() : 60;
-                                if (time > 0) {
-                                    time--;
-                                    timerRef.child(timerKey).set(time);
-                                } else {
-                                    clearInterval(intervals[timerKey]);
-                                    intervals[timerKey] = null;
-                                }
-                            });
-                        }, 1000);
-                    }
-                });
+            window.editTeamName = function(teamNumber) {
+                let display = document.getElementById(`displayTeam${teamNumber}`);
+                let input = document.getElementById(`team${teamNumber}`);
+                display.style.display = "none";
+                input.style.display = "block";
+                input.value = display.textContent;
+                input.focus();
             };
 
-            window.resetTimer = function() {
-                timerRef.set({
-                    timer1: 60, timer2: 60, timer3: 60, timer4: 60
-                });
+            window.saveTeamName = function(teamNumber) {
+                let display = document.getElementById(`displayTeam${teamNumber}`);
+                let input = document.getElementById(`team${teamNumber}`);
+                if (input.value.trim() !== "") {
+                    display.textContent = input.value;
+                    teamRef.child(`team${teamNumber}`).set(input.value);
+                }
+                input.style.display = "none";
+                display.style.display = "block";
             };
 
-            window.adjustTime = function(amount) {
-                selectedRef.get().then(snapshot => {
-                    if (snapshot.exists()) {
-                        let timerKey = `timer${snapshot.val()}`;
-                        timerRef.child(timerKey).get().then(timeSnap => {
-                            let time = timeSnap.exists() ? timeSnap.val() : 60;
-                            time += amount;
-                            if (time < 0) time = 0;
-                            timerRef.child(timerKey).set(time);
-                        });
-                    }
-                });
-            };
-
-            timerRef.on("value", snapshot => {
+            teamRef.on("value", snapshot => {
                 if (snapshot.exists()) {
                     let data = snapshot.val();
                     Object.keys(data).forEach(key => {
-                        document.getElementById(key).textContent = data[key];
+                        let teamNumber = key.replace("team", "");
+                        let display = document.getElementById(`displayTeam${teamNumber}`);
+                        if (display) {
+                            display.textContent = data[key];
+                        }
                     });
                 }
             });
@@ -200,4 +179,3 @@
     </script>
 </body>
 </html>
-
