--- a/index.html
+++ b/index.html
@@ -84,22 +84,22 @@
     <h1>De slimste kameraad</h1>
 
     <div class="timers">
-        <div class="timer-container" id="timerBox1" onclick="selectTimer(1)">
+        <div class="timer-container" id="timerBox1">
             <div class="team-name-display" id="displayTeam1" onclick="editTeamName(1)">Team 1</div>
             <input type="text" id="team1" class="team-name-input" onblur="saveTeamName(1)">
             <div class="timer" id="timer1">60</div>
         </div>
-        <div class="timer-container" id="timerBox2" onclick="selectTimer(2)">
+        <div class="timer-container" id="timerBox2">
             <div class="team-name-display" id="displayTeam2" onclick="editTeamName(2)">Team 2</div>
             <input type="text" id="team2" class="team-name-input" onblur="saveTeamName(2)">
             <div class="timer" id="timer2">60</div>
         </div>
-        <div class="timer-container" id="timerBox3" onclick="selectTimer(3)">
+        <div class="timer-container" id="timerBox3">
             <div class="team-name-display" id="displayTeam3" onclick="editTeamName(3)">Team 3</div>
             <input type="text" id="team3" class="team-name-input" onblur="saveTeamName(3)">
             <div class="timer" id="timer3">60</div>
         </div>
-        <div class="timer-container" id="timerBox4" onclick="selectTimer(4)">
+        <div class="timer-container" id="timerBox4">
             <div class="team-name-display" id="displayTeam4" onclick="editTeamName(4)">Team 4</div>
             <input type="text" id="team4" class="team-name-input" onblur="saveTeamName(4)">
             <div class="timer" id="timer4">60</div>
@@ -132,67 +132,35 @@
 
             let intervals = {};
 
-            window.selectTimer = function(timerNumber) {
-                selectedRef.set(timerNumber);
+            window.editTeamName = function(teamNumber) {
+                let display = document.getElementById(`displayTeam${teamNumber}`);
+                let input = document.getElementById(`team${teamNumber}`);
+                display.style.display = "none";
+                input.style.display = "block";
+                input.value = display.textContent;
+                input.focus();
             };
 
-            selectedRef.on("value", snapshot => {
-                document.querySelectorAll('.timer-container').forEach(el => el.classList.remove("selected"));
-                if (snapshot.exists()) {
-                    document.querySelector(`#timerBox${snapshot.val()}`).classList.add("selected");
+            window.saveTeamName = function(teamNumber) {
+                let display = document.getElementById(`displayTeam${teamNumber}`);
+                let input = document.getElementById(`team${teamNumber}`);
+                if (input.value.trim() !== "") {
+                    display.textContent = input.value;
+                    teamRef.child(`team${teamNumber}`).set(input.value);
                 }
-            });
-
-            window.startStopTimer = function() {
-                selectedRef.get().then(snapshot => {
-                    if (snapshot.exists()) {
-                        let timerKey = `timer${snapshot.val()}`;
-                        if (intervals[timerKey]) {
-                            clearInterval(intervals[timerKey]);
-                            intervals[timerKey] = null;
-                            return;
-                        }
-                        intervals[timerKey] = setInterval(() => {
-                            timerRef.child(timerKey).get().then(timeSnap => {
-                                let time = timeSnap.exists() ? timeSnap.val() : 60;
-                                if (time > 0) {
-                                    time--;
-                                    timerRef.child(timerKey).set(time);
-                                } else {
-                                    clearInterval(intervals[timerKey]);
-                                    intervals[timerKey] = null;
-                                }
-                            });
-                        }, 1000);
-                    }
-                });
+                input.style.display = "none";
+                display.style.display = "block";
             };
 
-            window.resetTimer = function() {
-                timerRef.set({
-                    timer1: 60, timer2: 60, timer3: 60, timer4: 60
-                });
-            };
-
-            window.adjustTime = function(amount) {
-                selectedRef.get().then(snapshot => {
-                    if (snapshot.exists()) {
-                        let timerKey = `timer${snapshot.val()}`;
-                        timerRef.child(timerKey).get().then(timeSnap => {
-                            let time = timeSnap.exists() ? timeSnap.val() : 60;
-                            time += amount;
-                            if (time < 0) time = 0;
-                            timerRef.child(timerKey).set(time);
-                        });
-                    }
-                });
-            };
-
-            timerRef.on("value", snapshot => {
+            teamRef.on("value", snapshot => {
                 if (snapshot.exists()) {
                     let data = snapshot.val();
                     Object.keys(data).forEach(key => {
-                        document.getElementById(key).textContent = data[key];
+                        let teamNumber = key.replace("team", "");
+                        let display = document.getElementById(`displayTeam${teamNumber}`);
+                        if (display) {
+                            display.textContent = data[key];
+                        }
                     });
                 }
             });
