--- a/index.html
+++ b/index.html
@@ -126,68 +126,43 @@
 
             firebase.initializeApp(firebaseConfig);
             const database = firebase.database();
-            const timerRef = database.ref('timers');
-            const selectedRef = database.ref('selectedTimer');
             const teamRef = database.ref('teams');
 
-            let intervals = {};
-
-            window.selectTimer = function(timerNumber) {
-                selectedRef.set(timerNumber);
+            // ✅ Functie om teamnaam te bewerken
+            window.editTeamName = function(teamNumber) {
+                let display = document.getElementById(`displayTeam${teamNumber}`);
+                let input = document.getElementById(`team${teamNumber}`);
+                display.style.display = "none";
+                input.style.display = "block";
+                input.value = display.textContent;
+                input.focus();
             };
 
-            selectedRef.on("value", snapshot => {
-                document.querySelectorAll('.timer-container').forEach(el => el.classList.remove("selected"));
+            // ✅ Functie om teamnaam op te slaan in Firebase
+            window.saveTeamName = function(teamNumber) {
+                let display = document.getElementById(`displayTeam${teamNumber}`);
+                let input = document.getElementById(`team${teamNumber}`);
+                if (input.value.trim() !== "") {
+                    display.textContent = input.value;
+                    teamRef.child(`team${teamNumber}`).set(input.value);
+                }
+                input.style.display = "none";
+                display.style.display = "block";
+            };
+
+            // ✅ Firebase luistert naar teamnaam-wijzigingen en past UI aan
+            teamRef.on("value", snapshot => {
                 if (snapshot.exists()) {
-                    document.querySelector(`#timerBox${snapshot.val()}`).classList.add("selected");
+                    let data = snapshot.val();
+                    Object.keys(data).forEach(key => {
+                        let teamNumber = key.replace("team", "");
+                        let display = document.getElementById(`displayTeam${teamNumber}`);
+                        if (display) {
+                            display.textContent = data[key];
+                        }
+                    });
                 }
             });
-
-            // ✅ Zorgt ervoor dat knoppen de functies kunnen vinden
-            window.startStopTimer = function() {
-                selectedRef.get().then(snapshot => {
-                    if (snapshot.exists()) {
-                        let timerKey = `timer${snapshot.val()}`;
-                        if (intervals[timerKey]) {
-                            clearInterval(intervals[timerKey]);
-                            intervals[timerKey] = null;
-                            return;
-                        }
-                        intervals[timerKey] = setInterval(() => {
-                            timerRef.child(timerKey).get().then(timeSnap => {
-                                let time = timeSnap.exists() ? timeSnap.val() : 60;
-                                if (time > 0) {
-                                    time--;
-                                    timerRef.child(timerKey).set(time);
-                                } else {
-                                    clearInterval(intervals[timerKey]);
-                                    intervals[timerKey] = null;
-                                }
-                            });
-                        }, 1000);
-                    }
-                });
-            };
-
-            window.resetTimer = function() {
-                timerRef.set({
-                    timer1: 60, timer2: 60, timer3: 60, timer4: 60
-                });
-            };
-
-            window.adjustTime = function(amount) {
-                selectedRef.get().then(snapshot => {
-                    if (snapshot.exists()) {
-                        let timerKey = `timer${snapshot.val()}`;
-                        timerRef.child(timerKey).get().then(timeSnap => {
-                            let time = timeSnap.exists() ? timeSnap.val() : 60;
-                            time += amount;
-                            if (time < 0) time = 0;
-                            timerRef.child(timerKey).set(time);
-                        });
-                    }
-                });
-            };
         });
     </script>
 </body>
